# CBIndex-simulator-canisters

./: Cargo.toml  README.md  canister_ids.json  dfx.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
scripts/: build.sh  build_notification.sh  build_token.sh  build_vault.sh  build_vault_factory.sh  deploy.sh  deploy_ckbtc.sh  deploy_cketh.sh  deploy_cmc.sh  deploy_ic.sh  deploy_icp_ledger.sh  deploy_icp_swap.sh  deploy_notification.sh  deploy_vault_factory.sh  deploy_vault_factory_ic.sh  deploy_xrc.sh  test_create_icp_swap_pool  test_create_vault.sh  test_deposit_withdraw.sh  test_vault_swap.sh  vault_factory_deploy.sh
src/candid/: notification.did  token-factory.did  token.did  vault-factory.did  vault.did
src/candid/icp-swap/: swap-factory.did  swap-pool.did
src/cbindex_frontend/: .App.tsx.swp  App.tsx  index.css  main.tsx
src/cbindex_frontend/Const/: Const.ts
src/cbindex_frontend/components/: Counter.tsx  Profile.tsx  Transfer.tsx
src/cbindex_frontend/pages/: CreateActiveFund.tsx  Vaults.tsx
src/cbindex_frontend/src/: index.html  index.js
src/cbindex_frontend/utils/: getTimeDistanceFromNow.js
src/icrc/: icrc1_ledger.wasm
src/notification/: Cargo.toml
src/notification/src/: api.rs  error.rs  lib.rs  main.rs  state.rs
src/notification/src/state/: controller.rs  notification_record.rs  whitelist.rs
src/token/api/: Cargo.toml
src/token/impl/: Cargo.toml
src/token_factory/: Cargo.toml
src/token_factory/src/: api.rs  error.rs  lib.rs  main.rs  state.rs
src/vault/: Cargo.toml
src/vault/src/: api.rs  error.rs  exchange_rate.rs  icp_swap.rs  lib.rs  main.rs  notification.rs  record.rs  state.rs
src/vault/src/icp_swap/: swap_factory.rs  swap_pool.rs
src/vault/src/icrc/: icrc1.rs  icrc2.rs  utils.rs
src/vault/src/state/: config.rs  follow.rs  ledger.rs  tx_record.rs
src/vault_factory/: Cargo.toml
src/vault_factory/src/: api.rs  error.rs  icrc.rs  lib.rs  main.rs  state.rs
test/cmc/: cmc-custom.wasm
test/icp_swap/PasscodeManager/: PasscodeManager.did  PasscodeManager.wasm
test/icp_swap/PositionIndex/: PositionIndex.wasm
test/icp_swap/SwapFactory/: SwapFactory.did  SwapFactory.wasm
test/icp_swap/SwapFeeReceiver/: SwapFeeReceiver.did  SwapFeeReceiver.wasm
test/icp_swap/TrustedCanisterManager/: TrustedCanisterManager.wasm
(+74 files in other folders)
