[package]
name = "notification"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = ["canister-sdk/metrics-api"]

[dependencies]
candid = "0.8"
serde = "1.0"
thiserror = "1.0"
canister-sdk = { workspace = true}
ic-exports = { workspace = true }
ic-stable-structures = { workspace = true  }

vault = { path = "../vault", package = "vault" }
